--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Krishna Chaithanya
+  description: Senior Software Engineer L2
+  company: Gemini
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
